[project]
name = "comfyui-ddcolor"
description = "Node to use [a/DDColor](https://github.com/piddnad/DDColor) in ComfyUI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy>=1.24.3", "opencv_python>=4.7.0.72", "Pillow>=10.1.0", "timm>=0.9.2", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-DDColor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DDColor"
Icon = ""
